# quad_keys

./: .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.googletest.txt.in  CMakeLists.swig.txt.in  CMakeLists.txt  Makefile.am  README.md  configure  configure.ac  quad_keys_declspec.h  ubuntu_22_04.docker  workbench.xmi
.github/workflows/: c-cpp.yml
CMake/: gtest.cmake  win32.cmake
QuadKey/: BingSystem.cpp  BingSystem.h  CMakeLists.txt  GeoCoordinateBoundingBox2d.cpp  GeoCoordinateBoundingBox2d.h  MortonSystem.h  NoneSystem.h  QuadKeyTypes.cpp  UlpQnrSystem.cpp  UlpQnrSystem.h  Utils.cpp  Utils.h
Swig/: AssemblyInfo.cs  QuadKeyCSharp.csproj  operators.i  pom.xml
Swig/python/: quadkey.py
Swig/src/main/java/com/quadkey/: Latitude.java  QuadKeyVector.java  Type.java
UnitTest/: CMakeLists.txt  TestBingSystem.cpp  TestGeoCoordinateBoundingBox2d.cpp  TestOsGeoSystem.cpp  main.cpp
UnitTestCSharp/: AssemblyInfo.cs  TestBingSystem.cs  TestGeoCoordinate2d.cs  TestGeoCoordinateBoundingBox2d.cs  TestLatLongSystem.cs  TestMortonSystem.cs  TestNoneSystem.cs  TestOsGeoSystem.cs  TestQuadKey.cs  TestSystem.cs  TestUlpQnrSystem.cs  UnitTestCSharp.csproj
UnitTestJava/src/test/java/: MortonSystemTest.java  SystemTest.java  UlpQnrSystemTest.java
UnitTestPython/: TestGeoCoordinate2d.py  TestMortonSystem.py  TestNoneSystem.py  TestQuadKey.py  TestUlpQnrSystem.py  main.ps1  main.py
bindings/: CMakeLists.txt  Makefile.am  operators.i  quad_key.swig  quad_keys.swig
bindings/java/quad_key/: build.gradle
bindings/java/quad_key/src/main/java/com/quad_key/: geo_coordinate2d.java  geo_coordinate_bounding_box2d.java  latitude.java  longitude.java  quad_key.java  quad_key_java.java  quad_key_javaJNI.java  quad_key_vector.java  type.java
bindings/java/quad_key/src/main/jni/: java_quad_key.cpp
bindings/java/quad_key/src/test/java/com/quad_key/: bing_system_test.java  osgeo_system_test.java  quad_key_test.java  ulp_qnr_system_test.java
bindings/java/quad_keys/: build.gradle
bindings/java/quad_keys/src/main/java/com/quad_keys/: GeoCoordinate2d.java  GeoCoordinateBoundingBox2d.java  Latitude.java  Longitude.java  QuadKey.java  QuadKeysVector.java  Type.java  quad_key_java.java  quad_key_javaJNI.java  quad_keys_java.java  quad_keys_javaJNI.java
bindings/java/quad_keys/src/main/jni/: quad_keys_java.cpp
bindings/java/quad_keys/src/test/java/com/quad_key/: bing_system_test.java  geo_coordinate2d_test.java  geo_coordinate_bounding_box2d_test.java  lat_long_system_test.java  morton_system_test.java  none_system_test.java  quad_key_test.java  system_test.java  ulp_qnr_system_test.java
bindings/java/quad_keys/src/test/java/com/quad_keys/: BingSystemTest.java  GeoCoordinate2dTest.java  GeoCoordinateBoundingBox2dTest.java  LatLonSystemTest.java  MortonSystemTest.java  NoneSystemTest.java  OsGeoSystemTest.java  QuadKeyTest.java  SystemTest.java  UlpQnrSystemTest.java
bindings/java/src/test/java/: LatLongSystemTest.java  OsGeoSystemTest.java  QuadKeyTest.java
bindings/python/: TestGeoCoordinateBoundingBox2d.py  TestOsGeoSystem.py  main.py  setup.py
bindings/python/native/: python_quad_key.cpp  quad_keys_python.cpp
bindings/python/quad_key/: quad_key.py
bindings/python/quad_key/tests/: test_bing_system.py  test_geo_coordinate2d.py  test_geo_coordinate_bounding_box2d.py  test_lat_long_system.py  test_osgeo_system.py
bindings/python/quad_keys/: quad_key.py  quad_keys.py
bindings/python/quad_keys/tests/: test_bing_system.py  test_geo_coordinate2d.py  test_geo_coordinate_bounding_box2d.py  test_lat_lon_system.py  test_morton_system.py  test_none_system.py  test_osgeo_system.py  test_quad_key.py  test_system.py  test_ulp_qnr_system.py
bindings/python/tests/: test_bing_system.py  test_lat_long_system.py
cmake/: c++11.cmake  gtest.cmake  swig.cmake  win32.cmake
include/: CMakeLists.txt  geo_coord2d.h  latlong_system.h  macros.h  osgeo_system.h  system.h
include/quad_key/: CMakeLists.txt  bing_system.h  geo_coordinate2d.h  geo_coordinate_bounding_box2d.h  lat_long_system.h  macros.h  morton_system.h  none_system.h  osgeo_system.h  quad_key.h  quad_key_types.h  s2_cell_system.h  system.h  ulp_qnr_system.h  utils.h
include/quad_keys/: bing_system.h  geo_coordinate2d.h  geo_coordinate_bounding_box2d.h  lat_lon_system.h  morton_system.h  none_system.h  osgeo_system.h  quad_key.h  quad_key_types.h  system.h  ulp_qnr_system.h  utils.h
lib/: CMakeLists.txt  Makefile.am  bing_system.cpp  geo_coordinate2d.cpp  geo_coordinate_bounding_box2d.cpp  lat_lon_system.cpp  lat_long_system.cpp  morton_system.cpp  none_system.cpp  osgeo_system.cpp  quad_key.cpp  quad_key_types.cpp  s2_cell_system.cpp  system.cpp  ulp_qnr_system.cpp  utils.cpp
m4/: bindings.m4
quad_key/: GeoCoordinate2d.cpp  QuadKey.cpp  QuadKey.h  QuadKeyTypes.h
scripts/: clang-format.sh
src/: CMakeLists.txt  latlong_system.cpp  morton_system.cpp  none_system.cpp  osgeo_system.cpp  system.cpp
swig/: QuadKey.swig
swig/python/: QuadKey_python.cpp
swig/src/main/java/com/quadkey/: GeoCoordinate2d.java  QuadKey.java  (+5 more)
test/: Makefile.am  TestMortonSystem.cpp  main.cpp  test_bing_system.cpp  test_geo_coordinate2d.cpp  test_geo_coordinate_bounding_box2d.cpp  test_lat_long_system.cpp  test_morton_system.cpp  test_osgeo_system.cpp  test_quad_key.cpp  test_ulp_qnr_system.cpp
test_java/src/test/java/: GeoCoordinateBoundingBox2dTest.java  NoneSystemTest.java
test_python/: TestSystem.py
tests/: CMakeLists.txt  test_bing_system.cpp  test_geo_coordinate2d.cpp  test_geo_coordinate_bounding_box2d.cpp  test_lat_long_system.cpp  test_morton_system.cpp  test_osgeo_system.cpp  test_quad_key.cpp  test_s2_cell_system.cpp  test_ulp_qnr_system.cpp
tests/c++/: CMakeLists.txt  test_bing_system.cpp  test_geo_coordinate2d.cpp  test_lat_long_system.cpp  test_morton_system.cpp  test_ulp_qnr_system.cpp
tests/java/src/test/java/: GeoCoordinate2dTest.java
unit_test/: TestGeoCoordinate2d.cpp  TestLatLongSystem.cpp  TestQuadKey.cpp  TestUlpQnrSystem.cpp
unit_test_java/: pom.xml
unit_test_java/src/test/java/: BingSystemTest.java
