install(FILES
  ./bing_system.h
  ./geo_coordinate2d.h
  ./geo_coordinate_bounding_box2d.h
  ./lat_long_system.h
  ./macros.h
  ./morton_system.h
  ./none_system.h
  ./osgeo_system.h
  ./quad_key.h
  ./quad_key_types.h
  ./s2_cell_system.h
  ./system.h
  ./ulp_qnr_system.h
  ./utils.h
  DESTINATION include/quad_key
)
